fixtures/external/negative/kernel-host-lifecycle-internal-import/runtime.mjs
import('@mog-sdk/kernel/host-lifecycle-internal');
